--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,17 +1,17 @@
 {
-"customizations": {
-  "vscode": {
-    "extensions": [
-      "ms-vscode.live-server",
-      "slevesque.vscode-zipexplorer",
-      "GitHub.copilot",
-      "GitHub.copilot-chat"
-    ]
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "ms-vscode.live-server",
+        "slevesque.vscode-zipexplorer",
+        "GitHub.copilot",
+        "GitHub.copilot-chat"
+      ]
+    }
+  },
+  "forwardPorts": [3000, 3001],
+  "portsAttributes": {
+    "3000": { "visibility": "public" },
+    "3001": { "visibility": "public" }
   }
-},
-"forwardPorts": [3000, 3001],
-"portsAttributes": {
-  "3000": { "label": "Codespace", "onAutoForward": "openBrowser", "visibility": "public" },
-  "3001": { "label": "Preview", "onAutoForward": "notify", "visibility": "public" }
-}
 }
