--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,5 +13,6 @@
   "portsAttributes": {
     "3000": { "visibility": "public" },
     "3001": { "visibility": "public" }
-  }
+},
+"postAttachCommand": "/bin/bash .devcontainer/setup.sh"
 }
