--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,10 +9,5 @@
       ]
     }
   },
-  "forwardPorts": [3000, 3001],
-  "portsAttributes": {
-    "3000": { "visibility": "public" },
-    "3001": { "visibility": "public" }
-},
-"postAttachCommand": "/bin/bash .devcontainer/setup.sh"
+  "forwardPorts": [3000, 3001, 3002]
 }
