--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#Project-wide ignores
+*devcontainer*
+.nojekyll
+Procfile
+CNAME
+
 # Logs
 logs
 *.log
@@ -137,3 +143,4 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
