--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/PhishyOne/Phishtopia.com#readme",
   "dependencies": {
+    "axios": "^1.12.2",
+    "csv-parse": "^6.1.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0"
   }
