Prep phishtopia/fullstack merge

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,9 @@
         "ms-vscode.live-server",
         "slevesque.vscode-zipexplorer",
         "GitHub.copilot",
-        "GitHub.copilot-chat"
+        "GitHub.copilot-chat",
+        "cweijan.vscode-postgresql-client2",
+        "cweijan.dbclient-jdbc"
       ]
     }
   },
