--- a/package.json
+++ b/package.json
@@ -2,33 +2,34 @@
   "name": "phishtopia.com",
   "version": "2.0.0",
   "description": "Phishtopia.com with backend",
-  "main": "index.js",
-  "type": "module",
-  "engines": {
-    "node": "22.x"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+  "keywords": [
+    "phishtopia",
+    "creativity"
+  ],
+  "homepage": "https://github.com/PhishyOne/Phishtopia.com#readme",
+  "bugs": {
+    "url": "https://github.com/PhishyOne/Phishtopia.com/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/PhishyOne/Phishtopia.com.git"
   },
-  "keywords": [
-    "phishtopia",
-    "creativity"
-  ],
-  "author": "PhishyOne",
   "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/PhishyOne/Phishtopia.com/issues"
+  "author": "PhishyOne",
+  "type": "module",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
-  "homepage": "https://github.com/PhishyOne/Phishtopia.com#readme",
   "dependencies": {
     "axios": "^1.12.2",
     "csv-parse": "^6.1.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0"
+  },
+  "devDependencies": {},
+  "engines": {
+    "node": "22.x"
   }
 }
