--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "axios": "^1.12.2",
     "csv-parse": "^6.1.0",
     "ejs": "^3.1.10",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.17.1"
   },
-  "devDependencies": {},
   "engines": {
     "node": "22.x"
   }
